// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GamePaused.vue matches snapshot 1`] = `
<gameoverlay-stub centercontent="true" showlogo="true" data-test="game-paused"> Game Paused
  <!---->
  <gamesummary-stub></gamesummary-stub>
  <pausegamebutton-stub></pausegamebutton-stub>
</gameoverlay-stub>
`;

exports[`GamePaused.vue shows inactive msg 1`] = `
<gameoverlay-stub centercontent="true" showlogo="true" data-test="game-paused"> Game Paused <p>Your game has been paused due to inactivity</p>
  <gamesummary-stub></gamesummary-stub>
  <pausegamebutton-stub></pausegamebutton-stub>
</gameoverlay-stub>
`;
